Fix issues of footer overlapping

--- a/frontend/src/stylesheets/book-manager.css
+++ b/frontend/src/stylesheets/book-manager.css
@@ -1,8 +1,8 @@
 /* Author - Arihant Dugar */
 
 .book-manager-div {
-    width: 100vw;
-    height: 100vh; 
+    width: 100%;
+    height: 100%; 
     background-color: rgba(252, 232, 199, 1) !important;
 }
 
